<resources>
    <string name="app_name">MealDB</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_favorite_meals">Favorite Meals</string>
    <string name="title_settings">Settings</string>
    <string name="categories">Categories</string>
    <string name="meals">Meals</string>
    <string name="error">Error!</string>
    <string name="see_all">See All</string>
    <string name="favorite">favorite</string>
    <string name="see_more">See More</string>
    <string name="category_image">category image</string>
    <string name="expand">expand</string>
    <string name="search">Search</string>
    <string name="search_meals">Search for meals…</string>
    <string name="meal_details">meal details</string>
    <string name="instruction_example">Preheat oven to 350° F. Spray a 9x13-inch baking pan with non-stick spray.r\nCombine soy sauce, ½ cup water, brown sugar, ginger and garlic in a small saucepan and cover. Bring to a boil over medium heat. Remove lid and cook for one minute once boiling.r\nMeanwhile, stir together the corn starch and 2 tablespoons of water in a separate dish until smooth. Once sauce is boiling, add mixture to the saucepan and stir to combine. Cook until the sauce starts to thicken then remove from heat.r\nPlace the chicken breasts in the prepared pan. Pour one cup of the sauce over top of chicken. Place chicken in oven and bake 35 minutes or until cooked through. Remove from oven and shred chicken in the dish using two forks.r\n*Meanwhile, steam or cook the vegetables according to package directions.r\nAdd the cooked vegetables and rice to the casserole dish with the chicken. Add most of the remaining sauce, reserving a bit to drizzle over the top when serving. Gently toss everything together in the casserole dish until combined. Return to oven and cook 15 minutes. Remove from oven and let stand 5 minutes before serving. Drizzle each serving with remaining sauce. Enjoy!</string>
    <string name="meal_name_example">Teriyaki Chicken Casserole</string>
    <string name="ingredients">Ingredients</string>
    <string name="category_example">Chicken</string>
    <string name="area_example">Japanese</string>
    <string name="instructions">Instructions</string>
</resources>