<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mealDetail"
            type="com.herdal.mealdb.domain.uimodel.MealDetailUiModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/meal_details"
        tools:context=".presentation.meal_details.MealDetailsFragment">

        <LinearLayout
            android:id="@+id/containerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_meal_detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivMealDetails"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/meal_detail_thumb_height"
                    android:downloadImage="@{mealDetail.thumbnail}"
                    android:scaleType="fitXY" />
            </com.google.android.material.card.MaterialCardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/medium_padding">

                <TextView
                    android:id="@+id/tvMealNameDetails"
                    style="@style/TitleText.XLarge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"
                    android:text="@{mealDetail.name}"
                    android:textAlignment="center" />

                <LinearLayout
                    android:id="@+id/layout_cateogry_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvMealCategoryDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/small_margin"
                        android:layout_weight="1"
                        android:background="@drawable/tv_border"
                        android:gravity="center"
                        android:padding="@dimen/triple_extra_small_padding"
                        android:text="@{mealDetail.category}"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tvMealAreaDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/small_margin"
                        android:layout_weight="1"
                        android:background="@drawable/tv_border"
                        android:gravity="center"
                        android:padding="@dimen/triple_extra_small_padding"
                        android:text="@{mealDetail.area}"
                        android:textColor="@color/white" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvIngredientText"
                    style="@style/TitleText.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_margin"
                    android:text="@string/ingredients" />

                <LinearLayout
                    android:id="@+id/layout_ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvIngredient1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{mealDetail.ingredient1}" />

                    <TextView
                        android:id="@+id/tvIngredient2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/double_extra_small_margin"
                        android:text="@{mealDetail.ingredient2}" />

                    <TextView
                        android:id="@+id/tvIngredient3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{mealDetail.ingredient3}" />

                    <TextView
                        android:id="@+id/tvIngredient4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/double_extra_small_margin"
                        android:text="@{mealDetail.ingredient4}" />

                    <TextView
                        android:id="@+id/tvIngredient5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{mealDetail.ingredient5}" />

                    <TextView
                        android:id="@+id/tvMealDetailsError"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/error"
                        android:visibility="gone" />

                    <ProgressBar
                        android:id="@+id/pbMealDetails"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone" />

                </LinearLayout>

                <ImageButton
                    android:id="@+id/ibExpandIngredient"
                    expandOrCollapse="@{layoutIngredients}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/double_extra_small_margin"
                    android:background="@color/white"
                    android:contentDescription="@string/expand"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_expand_more" />

                <TextView
                    android:id="@+id/tvInstructionsText"
                    style="@style/TitleText.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_margin"
                    android:text="@string/instructions" />

                <LinearLayout
                    android:id="@+id/layout_instruction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvInstructions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{mealDetail.instructions}" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ibExpandInstruction"
                    expandOrCollapse="@{layoutInstruction}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/double_extra_small_margin"
                    android:background="@color/white"
                    android:contentDescription="@string/expand"
                    android:minWidth="@dimen/image_button_min_size"
                    android:minHeight="@dimen/image_button_min_size"
                    android:paddingBottom="?attr/actionBarSize"
                    android:src="@drawable/ic_expand_more" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>